--- a/133. Clone Graph.ipynb
+++ b/133. Clone Graph.ipynb
@@ -9,6 +9,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O( V+E )$**  \n",
+    "**空間複雜度: $O( V )$**\n",
+    "\n",
+    "$V$ 為節點數，$E$ 為邊數"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -26,95 +36,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import collections\n",
-    "class Solution:\n",
-    "    def cloneGraph(self, node):\n",
-    "        if not node:\n",
-    "            return\n",
-    "\n",
-    "        queu = collections.deque([node])  # 建立一個雙向隊列，初始放入節點node\n",
-    "        clone = {node.val: Node(node.val, [])}  # 建立一個字典，以節點值為鍵，對應的值為一個新的節點clone\n",
-    "\n",
-    "        while queu:  # 當隊列不為空時進行迴圈\n",
-    "            print(f\"init: queu = {queu}\")\n",
-    "            print(f\"init: clone = {clone}\")\n",
-    "            cur = queu.popleft()  # 從隊列的左邊彈出一個節點，並將其賦值給cur\n",
-    "            print(f\"cur = {cur}\")\n",
-    "            print(f\"cur.val = {cur.val}\")\n",
-    "            for neighbor in cur.neighbors:  # 對於當前節點cur的每個鄰居節點\n",
-    "                if neighbor.val not in clone:  # 若neighbor節點的值不在clone字典中\n",
-    "                    clone[neighbor.val] = Node(neighbor.val, [])  # 創建一個新的節點並添加到clone字典中\n",
-    "                    queu.append(neighbor)  # 將neighbor節點添加到隊列中\n",
-    "\n",
-    "                clone[cur.val].neighbors.append(clone[neighbor.val])  # 在clone字典中對應的節點的neighbors中添加相應的節點\n",
-    "                print(f\"-> node{cur.val} 的 neighbors 增加 node{neighbor.val}\")\n",
-    "            \n",
-    "            print(f\"new: queu = {queu}\")\n",
-    "            print(f\"new: clone = {clone}\")\n",
-    "            print(\"-\"*200)\n",
-    "            \n",
-    "        return clone[node.val]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "init: queu = deque([<__main__.Node object at 0x0000026617331880>])\n",
-      "init: clone = {1: <__main__.Node object at 0x00000266173069A0>}\n",
-      "cur = <__main__.Node object at 0x0000026617331880>\n",
-      "cur.val = 1\n",
-      "-> node1 的 neighbors 增加 node2\n",
-      "-> node1 的 neighbors 增加 node4\n",
-      "new: queu = deque([<__main__.Node object at 0x0000026617331D30>, <__main__.Node object at 0x0000026617331FA0>])\n",
-      "new: clone = {1: <__main__.Node object at 0x00000266173069A0>, 2: <__main__.Node object at 0x00000266173780A0>, 4: <__main__.Node object at 0x0000026617378100>}\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "init: queu = deque([<__main__.Node object at 0x0000026617331D30>, <__main__.Node object at 0x0000026617331FA0>])\n",
-      "init: clone = {1: <__main__.Node object at 0x00000266173069A0>, 2: <__main__.Node object at 0x00000266173780A0>, 4: <__main__.Node object at 0x0000026617378100>}\n",
-      "cur = <__main__.Node object at 0x0000026617331D30>\n",
-      "cur.val = 2\n",
-      "-> node2 的 neighbors 增加 node1\n",
-      "-> node2 的 neighbors 增加 node3\n",
-      "new: queu = deque([<__main__.Node object at 0x0000026617331FA0>, <__main__.Node object at 0x0000026617331BE0>])\n",
-      "new: clone = {1: <__main__.Node object at 0x00000266173069A0>, 2: <__main__.Node object at 0x00000266173780A0>, 4: <__main__.Node object at 0x0000026617378100>, 3: <__main__.Node object at 0x0000026617378160>}\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "init: queu = deque([<__main__.Node object at 0x0000026617331FA0>, <__main__.Node object at 0x0000026617331BE0>])\n",
-      "init: clone = {1: <__main__.Node object at 0x00000266173069A0>, 2: <__main__.Node object at 0x00000266173780A0>, 4: <__main__.Node object at 0x0000026617378100>, 3: <__main__.Node object at 0x0000026617378160>}\n",
-      "cur = <__main__.Node object at 0x0000026617331FA0>\n",
-      "cur.val = 4\n",
-      "-> node4 的 neighbors 增加 node1\n",
-      "-> node4 的 neighbors 增加 node3\n",
-      "new: queu = deque([<__main__.Node object at 0x0000026617331BE0>])\n",
-      "new: clone = {1: <__main__.Node object at 0x00000266173069A0>, 2: <__main__.Node object at 0x00000266173780A0>, 4: <__main__.Node object at 0x0000026617378100>, 3: <__main__.Node object at 0x0000026617378160>}\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "init: queu = deque([<__main__.Node object at 0x0000026617331BE0>])\n",
-      "init: clone = {1: <__main__.Node object at 0x00000266173069A0>, 2: <__main__.Node object at 0x00000266173780A0>, 4: <__main__.Node object at 0x0000026617378100>, 3: <__main__.Node object at 0x0000026617378160>}\n",
-      "cur = <__main__.Node object at 0x0000026617331BE0>\n",
-      "cur.val = 3\n",
-      "-> node3 的 neighbors 增加 node2\n",
-      "-> node3 的 neighbors 增加 node4\n",
-      "new: queu = deque([])\n",
-      "new: clone = {1: <__main__.Node object at 0x00000266173069A0>, 2: <__main__.Node object at 0x00000266173780A0>, 4: <__main__.Node object at 0x0000026617378100>, 3: <__main__.Node object at 0x0000026617378160>}\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.Node at 0x266173069a0>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "node = Node(1)\n",
     "node2 = Node(2)\n",
     "node3 = Node(3)\n",
@@ -122,9 +43,391 @@
     "node.neighbors = [node2, node4]\n",
     "node2.neighbors = [node, node3]\n",
     "node3.neighbors = [node2, node4]\n",
-    "node4.neighbors = [node, node3]\n",
+    "node4.neighbors = [node, node3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### dfs (Depth-First Search) 深度優先搜尋"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Optional\n",
+    "\n",
+    "class Solution:\n",
+    "    def cloneGraph(self, node: Optional['Node']) -> Optional['Node']:\n",
+    "        # 記錄已克隆的節點，用於避免重複克隆\n",
+    "        visited = {} # space: O(V)，V 節點數\n",
+    "        \n",
+    "        def dfs(node):  # time: O(V+E)，V 節點數、E 是邊數 # space: O(V)，V 節點數\n",
+    "            # 如果節點為空，直接返回 None（基礎條件）\n",
+    "            if not node:\n",
+    "                return None\n",
+    "\n",
+    "            print(f\"\\n{node.val=}\")\n",
+    "            for neighbor1 in node.neighbors: print(f\"node: {neighbor1.val=}\")\n",
+    "\n",
+    "            # 如果當前節點已經克隆過，直接返回該克隆節點（避免重複克隆）\n",
+    "            if node in visited:\n",
+    "                print(f\"{node.val=} in visited\")\n",
+    "                return visited[node]\n",
+    "\n",
+    "            # 克隆當前節點，僅複製值，鄰居列表稍後處理\n",
+    "            clone = Node(node.val)\n",
+    "            \n",
+    "            print(f\"\\n{clone.val=}\")\n",
+    "            for neighbor1 in clone.neighbors: print(f\"clone: {neighbor1.val=}\")\n",
+    "\n",
+    "            # 將原始節點與克隆節點的映射存入 visited 字典\n",
+    "            visited[node] = clone\n",
+    "\n",
+    "            # 遍歷當前節點的所有鄰居\n",
+    "            for neighbor in node.neighbors:\n",
+    "                print(f\"\\n{node.val=}, {neighbor.val=}\")\n",
+    "\n",
+    "                # 對鄰居節點遞歸調用 dfs 進行克隆\n",
+    "                neighbor_clone = dfs(neighbor)\n",
+    "\n",
+    "                print(f\"\\n{neighbor_clone.val=}\")                \n",
+    "                for neighbor1 in neighbor_clone.neighbors: print(f\"neighbor_clone: {neighbor1.val=}\")\n",
+    "\n",
+    "                # 將克隆的鄰居節點加入到當前克隆節點的鄰居列表\n",
+    "                clone.neighbors.append(neighbor_clone)\n",
+    "                \n",
+    "                print(f\"\\n{clone.val=}\")\n",
+    "                for neighbor1 in clone.neighbors: print(f\"clone: {neighbor1.val=}\")\n",
+    "                print(\"-\" * 100)\n",
+    "            print(\"_\" * 100)\n",
+    "\n",
+    "            # 返回克隆的當前節點\n",
+    "            return clone\n",
+    "\n",
+    "        # 從輸入節點開始克隆整個圖\n",
+    "        return dfs(node)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "node.val=1\n",
+      "node: neighbor1.val=2\n",
+      "node: neighbor1.val=4\n",
+      "\n",
+      "clone.val=1\n",
+      "\n",
+      "node.val=1, neighbor.val=2\n",
+      "\n",
+      "node.val=2\n",
+      "node: neighbor1.val=1\n",
+      "node: neighbor1.val=3\n",
+      "\n",
+      "clone.val=2\n",
+      "\n",
+      "node.val=2, neighbor.val=1\n",
+      "\n",
+      "node.val=1\n",
+      "node: neighbor1.val=2\n",
+      "node: neighbor1.val=4\n",
+      "node.val=1 in visited\n",
+      "\n",
+      "neighbor_clone.val=1\n",
+      "\n",
+      "clone.val=2\n",
+      "clone: neighbor1.val=1\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "node.val=2, neighbor.val=3\n",
+      "\n",
+      "node.val=3\n",
+      "node: neighbor1.val=2\n",
+      "node: neighbor1.val=4\n",
+      "\n",
+      "clone.val=3\n",
+      "\n",
+      "node.val=3, neighbor.val=2\n",
+      "\n",
+      "node.val=2\n",
+      "node: neighbor1.val=1\n",
+      "node: neighbor1.val=3\n",
+      "node.val=2 in visited\n",
+      "\n",
+      "neighbor_clone.val=2\n",
+      "neighbor_clone: neighbor1.val=1\n",
+      "\n",
+      "clone.val=3\n",
+      "clone: neighbor1.val=2\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "node.val=3, neighbor.val=4\n",
+      "\n",
+      "node.val=4\n",
+      "node: neighbor1.val=1\n",
+      "node: neighbor1.val=3\n",
+      "\n",
+      "clone.val=4\n",
+      "\n",
+      "node.val=4, neighbor.val=1\n",
+      "\n",
+      "node.val=1\n",
+      "node: neighbor1.val=2\n",
+      "node: neighbor1.val=4\n",
+      "node.val=1 in visited\n",
+      "\n",
+      "neighbor_clone.val=1\n",
+      "\n",
+      "clone.val=4\n",
+      "clone: neighbor1.val=1\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "node.val=4, neighbor.val=3\n",
+      "\n",
+      "node.val=3\n",
+      "node: neighbor1.val=2\n",
+      "node: neighbor1.val=4\n",
+      "node.val=3 in visited\n",
+      "\n",
+      "neighbor_clone.val=3\n",
+      "neighbor_clone: neighbor1.val=2\n",
+      "\n",
+      "clone.val=4\n",
+      "clone: neighbor1.val=1\n",
+      "clone: neighbor1.val=3\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "____________________________________________________________________________________________________\n",
+      "\n",
+      "neighbor_clone.val=4\n",
+      "neighbor_clone: neighbor1.val=1\n",
+      "neighbor_clone: neighbor1.val=3\n",
+      "\n",
+      "clone.val=3\n",
+      "clone: neighbor1.val=2\n",
+      "clone: neighbor1.val=4\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "____________________________________________________________________________________________________\n",
+      "\n",
+      "neighbor_clone.val=3\n",
+      "neighbor_clone: neighbor1.val=2\n",
+      "neighbor_clone: neighbor1.val=4\n",
+      "\n",
+      "clone.val=2\n",
+      "clone: neighbor1.val=1\n",
+      "clone: neighbor1.val=3\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "____________________________________________________________________________________________________\n",
+      "\n",
+      "neighbor_clone.val=2\n",
+      "neighbor_clone: neighbor1.val=1\n",
+      "neighbor_clone: neighbor1.val=3\n",
+      "\n",
+      "clone.val=1\n",
+      "clone: neighbor1.val=2\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "node.val=1, neighbor.val=4\n",
+      "\n",
+      "node.val=4\n",
+      "node: neighbor1.val=1\n",
+      "node: neighbor1.val=3\n",
+      "node.val=4 in visited\n",
+      "\n",
+      "neighbor_clone.val=4\n",
+      "neighbor_clone: neighbor1.val=1\n",
+      "neighbor_clone: neighbor1.val=3\n",
+      "\n",
+      "clone.val=1\n",
+      "clone: neighbor1.val=2\n",
+      "clone: neighbor1.val=4\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "____________________________________________________________________________________________________\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Node at 0x17ef9dd43d0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "Solution().cloneGraph(node)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BFS (Breadth-First Search) 廣度優先搜索"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "from typing import Optional\n",
+    "\n",
+    "class Solution:\n",
+    "    def cloneGraph(self, node: Optional['Node']) -> Optional['Node']:\n",
+    "        if not node:  # 如果輸入節點為空，直接返回 None\n",
+    "            return\n",
+    "\n",
+    "        # 使用隊列來進行BFS，初始化時將輸入節點放入隊列中\n",
+    "        queue = deque([node]) # space: O(V)，V 節點數\n",
+    "        \n",
+    "        print(f\"{node.val=}\")\n",
+    "        for idx, node_tmp in enumerate(queue): print(f\"queue[{idx}] = {node_tmp.val}\")\n",
+    "\n",
+    "        # 初始化字典，用於記錄原節點到克隆節點的映射\n",
+    "        # 克隆輸入節點，並存入 visited 中\n",
+    "        visited = {} # space: O(V)，V 節點數\n",
+    "        visited[node.val] = Node(node.val)\n",
+    "\n",
+    "        print(f\"{visited=}\") \n",
+    "\n",
+    "        # 使用 while 迴圈遍歷整個圖\n",
+    "        while queue: # time: O(V+E)，V 節點數、E 是邊數\n",
+    "            print(\"_\" * 100)\n",
+    "            for idx, node_tmp in enumerate(queue): print(f\"init: queue[{idx}] = {node_tmp.val}\")\n",
+    "\n",
+    "            # 取出隊列中的節點\n",
+    "            current = queue.popleft()\n",
+    "\n",
+    "            print(f\"pop: {current.val=}\")\n",
+    "            for idx, node_tmp in enumerate(queue): print(f\"queue[{idx}] = {node_tmp.val}\")\n",
+    "            \n",
+    "            # 遍歷當前節點的所有鄰居\n",
+    "            for neighbor in current.neighbors: # time: O(E)，E 是邊數\n",
+    "                print(f\"\\n{neighbor.val=}\")\n",
+    "                \n",
+    "                # 如果鄰居尚未被克隆，則進行克隆\n",
+    "                if neighbor.val not in visited:\n",
+    "                    print(f\"({neighbor.val=}) not in (visited={visited.keys()})\")\n",
+    "                    \n",
+    "                    visited[neighbor.val] = Node(neighbor.val) # 克隆鄰居節點，並記錄到 visited 中\n",
+    "                    queue.append(neighbor)  # 將鄰居節點加入隊列中，以便後續處理\n",
+    "\n",
+    "                    print(f\"{visited=}\")\n",
+    "                    for idx, node_tmp in enumerate(queue): print(f\"queue[{idx}] = {node_tmp.val}\")\n",
+    "                \n",
+    "                # 將克隆的鄰居加入克隆節點的鄰居列表中\n",
+    "                visited[current.val].neighbors.append(visited[neighbor.val])\n",
+    "\n",
+    "                for neighbor in visited[current.val].neighbors: print(f\"visited[{current.val}].neighbors = {neighbor.val}\")\n",
+    "\n",
+    "        \n",
+    "        return visited[node.val] # 返回克隆圖的起始節點"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "node.val=1\n",
+      "queue[0] = 1\n",
+      "visited={1: <__main__.Node object at 0x0000017EF9D82390>}\n",
+      "____________________________________________________________________________________________________\n",
+      "init: queue[0] = 1\n",
+      "pop: current.val=1\n",
+      "\n",
+      "neighbor.val=2\n",
+      "(neighbor.val=2) not in (visited=dict_keys([1]))\n",
+      "visited={1: <__main__.Node object at 0x0000017EF9D82390>, 2: <__main__.Node object at 0x0000017EF9DC5550>}\n",
+      "queue[0] = 2\n",
+      "visited[1].neighbors = 2\n",
+      "\n",
+      "neighbor.val=4\n",
+      "(neighbor.val=4) not in (visited=dict_keys([1, 2]))\n",
+      "visited={1: <__main__.Node object at 0x0000017EF9D82390>, 2: <__main__.Node object at 0x0000017EF9DC5550>, 4: <__main__.Node object at 0x0000017EF9DC5090>}\n",
+      "queue[0] = 2\n",
+      "queue[1] = 4\n",
+      "visited[1].neighbors = 2\n",
+      "visited[1].neighbors = 4\n",
+      "____________________________________________________________________________________________________\n",
+      "init: queue[0] = 2\n",
+      "init: queue[1] = 4\n",
+      "pop: current.val=2\n",
+      "queue[0] = 4\n",
+      "\n",
+      "neighbor.val=1\n",
+      "visited[2].neighbors = 1\n",
+      "\n",
+      "neighbor.val=3\n",
+      "(neighbor.val=3) not in (visited=dict_keys([1, 2, 4]))\n",
+      "visited={1: <__main__.Node object at 0x0000017EF9D82390>, 2: <__main__.Node object at 0x0000017EF9DC5550>, 4: <__main__.Node object at 0x0000017EF9DC5090>, 3: <__main__.Node object at 0x0000017EF9DC4B50>}\n",
+      "queue[0] = 4\n",
+      "queue[1] = 3\n",
+      "visited[2].neighbors = 1\n",
+      "visited[2].neighbors = 3\n",
+      "____________________________________________________________________________________________________\n",
+      "init: queue[0] = 4\n",
+      "init: queue[1] = 3\n",
+      "pop: current.val=4\n",
+      "queue[0] = 3\n",
+      "\n",
+      "neighbor.val=1\n",
+      "visited[4].neighbors = 1\n",
+      "\n",
+      "neighbor.val=3\n",
+      "visited[4].neighbors = 1\n",
+      "visited[4].neighbors = 3\n",
+      "____________________________________________________________________________________________________\n",
+      "init: queue[0] = 3\n",
+      "pop: current.val=3\n",
+      "\n",
+      "neighbor.val=2\n",
+      "visited[3].neighbors = 2\n",
+      "\n",
+      "neighbor.val=4\n",
+      "visited[3].neighbors = 2\n",
+      "visited[3].neighbors = 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Node at 0x17ef9d82390>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Solution().cloneGraph(node)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -143,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
