--- a/210. Course Schedule II.ipynb
+++ b/210. Course Schedule II.ipynb
@@ -22,6 +22,256 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### bfs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "from collections import deque\n",
+    "\n",
+    "class Solution:\n",
+    "    def findOrder(self, numCourses: int, prerequisites: List[List[int]]) -> List[int]:\n",
+    "        # 建立鄰接表和入度表\n",
+    "        graph = [[] for _ in range(numCourses)] # space: O(E)\n",
+    "        indegree = [0] * numCourses # space: O(V)\n",
+    "        \n",
+    "        # 建立鄰接表和計算每個節點的入度\n",
+    "        for course, prereq in prerequisites:\n",
+    "            graph[prereq].append(course)\n",
+    "            indegree[course] += 1\n",
+    "            \n",
+    "        # 將所有入度為0的課程加入隊列\n",
+    "        queue = deque() # space: O(V)\n",
+    "        for i in range(numCourses):\n",
+    "            if indegree[i] == 0:\n",
+    "                queue.append(i)\n",
+    "                \n",
+    "        result = [] # space: O(V)\n",
+    "        \n",
+    "        # BFS\n",
+    "        while queue:\n",
+    "            curr = queue.popleft()\n",
+    "            result.append(curr)\n",
+    "            \n",
+    "            # 將當前課程的所有後續課程的入度減1\n",
+    "            for next_course in graph[curr]:\n",
+    "                indegree[next_course] -= 1\n",
+    "                # 如果入度變為0，表示可以修這門課了\n",
+    "                if indegree[next_course] == 0:\n",
+    "                    queue.append(next_course)\n",
+    "                    \n",
+    "        # 如果無法完成所有課程（存在環），返回空列表\n",
+    "        return result if len(result) == numCourses else []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "graph={}\n",
+      "\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "course=0, visited=[0]\n",
+      "visited[0] = 1\n",
+      "visited=[1]\n",
+      "visited[0] = 2\n",
+      "visited=[2]\n",
+      "result=[0] -> return True\n",
+      "course=0, status=True\n",
+      "____________________________________________________________________________________________________\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# empty (沒有先修條件，直接返回課程順序)\n",
+    "numCourses = 1\n",
+    "prerequisites = []\n",
+    "Solution().findOrder(numCourses, prerequisites) # [0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "graph={0: [1], 1: [0]}\n",
+      "\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "course=0, visited=[0, 0]\n",
+      "visited[0] = 1\n",
+      "visited=[1, 0]\n",
+      "\n",
+      "course=0 -> next_course=1\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "course=1, visited=[1, 0]\n",
+      "visited[1] = 1\n",
+      "visited=[1, 1]\n",
+      "\n",
+      "course=1 -> next_course=0\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "course=0, visited=[1, 1]\n",
+      "visited[0] == 1 -> return False\n",
+      "\n",
+      "course=1 -> next_course=0, status=False\n",
+      "return False\n",
+      "\n",
+      "course=0 -> next_course=1, status=False\n",
+      "return False\n",
+      "course=0, status=False\n",
+      "____________________________________________________________________________________________________\n",
+      "return []\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# cycle (有環，已經訪問過的課程，再次訪問，表示有環，無法完成所有課程。ex: 1 -> 0 -> 1)\n",
+    "numCourses = 2\n",
+    "prerequisites = [[1, 0], [0, 1]]\n",
+    "Solution().findOrder(numCourses, prerequisites) # []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "graph={0: [1, 2], 1: [3], 2: [3]}\n",
+      "\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "course=0, visited=[0, 0, 0, 0]\n",
+      "visited[0] = 1\n",
+      "visited=[1, 0, 0, 0]\n",
+      "\n",
+      "course=0 -> next_course=1\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "course=1, visited=[1, 0, 0, 0]\n",
+      "visited[1] = 1\n",
+      "visited=[1, 1, 0, 0]\n",
+      "\n",
+      "course=1 -> next_course=3\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "course=3, visited=[1, 1, 0, 0]\n",
+      "visited[3] = 1\n",
+      "visited=[1, 1, 0, 1]\n",
+      "visited[3] = 2\n",
+      "visited=[1, 1, 0, 2]\n",
+      "result=[3] -> return True\n",
+      "\n",
+      "course=1 -> next_course=3, status=True\n",
+      "visited[1] = 2\n",
+      "visited=[1, 2, 0, 2]\n",
+      "result=[3, 1] -> return True\n",
+      "\n",
+      "course=0 -> next_course=1, status=True\n",
+      "\n",
+      "course=0 -> next_course=2\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "course=2, visited=[1, 2, 0, 2]\n",
+      "visited[2] = 1\n",
+      "visited=[1, 2, 1, 2]\n",
+      "\n",
+      "course=2 -> next_course=3\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "course=3, visited=[1, 2, 1, 2]\n",
+      "visited[3] == 2 -> return True\n",
+      "\n",
+      "course=2 -> next_course=3, status=True\n",
+      "visited[2] = 2\n",
+      "visited=[1, 2, 2, 2]\n",
+      "result=[3, 1, 2] -> return True\n",
+      "\n",
+      "course=0 -> next_course=2, status=True\n",
+      "visited[0] = 2\n",
+      "visited=[2, 2, 2, 2]\n",
+      "result=[3, 1, 2, 0] -> return True\n",
+      "course=0, status=True\n",
+      "____________________________________________________________________________________________________\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "course=1, visited=[2, 2, 2, 2]\n",
+      "visited[1] == 2 -> return True\n",
+      "course=1, status=True\n",
+      "____________________________________________________________________________________________________\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "course=2, visited=[2, 2, 2, 2]\n",
+      "visited[2] == 2 -> return True\n",
+      "course=2, status=True\n",
+      "____________________________________________________________________________________________________\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "course=3, visited=[2, 2, 2, 2]\n",
+      "visited[3] == 2 -> return True\n",
+      "course=3, status=True\n",
+      "____________________________________________________________________________________________________\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 1, 3]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# normal (沒有環，可以完成所有課程)\n",
+    "numCourses = 4\n",
+    "prerequisites = [[1, 0], [2, 0], [3, 1], [3, 2]]\n",
+    "Solution().findOrder(numCourses, prerequisites) # [0, 1, 2, 3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### dfs"
    ]
   },
