--- a/113. Path Sum II.ipynb
+++ b/113. Path Sum II.ipynb
@@ -62,6 +62,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "使用dfs，因為要找到所有可能的路徑，使用bfs會比較複雜且佔用空間較多"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
