--- a/133. Clone Graph.ipynb
+++ b/133. Clone Graph.ipynb
@@ -50,6 +50,170 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- bfs優勢:  \n",
+    "    - 更直觀  \n",
+    "    - 不會有遞回調用開銷  \n",
+    "- dfs劣勢:  \n",
+    "    - 處理環形圖時可能會有較深的遞迴調用  \n",
+    "    - 需要額外的遞迴棧空間  \n",
+    "    - 實現較複雜，須注意回溯  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BFS (Breadth-First Search) 廣度優先搜索"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "from typing import Optional\n",
+    "\n",
+    "class Solution:\n",
+    "    def cloneGraph(self, node: Optional['Node']) -> Optional['Node']:\n",
+    "        if not node:  # 如果輸入節點為空，直接返回 None\n",
+    "            return\n",
+    "\n",
+    "        # 使用隊列來進行BFS，初始化時將輸入節點放入隊列中\n",
+    "        queue = deque([node]) # space: O(V)，V 節點數\n",
+    "        \n",
+    "        print(f\"{node.val=}\")\n",
+    "        for idx, node_tmp in enumerate(queue): print(f\"queue[{idx}] = {node_tmp.val}\")\n",
+    "\n",
+    "        # 初始化字典，用於記錄原節點到克隆節點的映射\n",
+    "        # 克隆輸入節點，並存入 visited 中\n",
+    "        visited = {} # space: O(V)，V 節點數\n",
+    "        visited[node.val] = Node(node.val)\n",
+    "\n",
+    "        print(f\"{visited=}\") \n",
+    "\n",
+    "        # 使用 while 迴圈遍歷整個圖\n",
+    "        while queue: # time: O(V+E)，V 節點數、E 是邊數\n",
+    "            print(\"_\" * 100)\n",
+    "            for idx, node_tmp in enumerate(queue): print(f\"init: queue[{idx}] = {node_tmp.val}\")\n",
+    "\n",
+    "            # 取出隊列中的節點\n",
+    "            current = queue.popleft()\n",
+    "\n",
+    "            print(f\"pop: {current.val=}\")\n",
+    "            for idx, node_tmp in enumerate(queue): print(f\"queue[{idx}] = {node_tmp.val}\")\n",
+    "            \n",
+    "            # 遍歷當前節點的所有鄰居\n",
+    "            for neighbor in current.neighbors: # time: O(E)，E 是邊數\n",
+    "                print(f\"\\n{neighbor.val=}\")\n",
+    "                \n",
+    "                # 如果鄰居尚未被克隆，則進行克隆\n",
+    "                if neighbor.val not in visited:\n",
+    "                    print(f\"({neighbor.val=}) not in (visited={visited.keys()})\")\n",
+    "                    \n",
+    "                    visited[neighbor.val] = Node(neighbor.val) # 克隆鄰居節點，並記錄到 visited 中\n",
+    "                    queue.append(neighbor)  # 將鄰居節點加入隊列中，以便後續處理\n",
+    "\n",
+    "                    print(f\"{visited=}\")\n",
+    "                    for idx, node_tmp in enumerate(queue): print(f\"queue[{idx}] = {node_tmp.val}\")\n",
+    "                \n",
+    "                # 將克隆的鄰居加入克隆節點的鄰居列表中\n",
+    "                visited[current.val].neighbors.append(visited[neighbor.val])\n",
+    "\n",
+    "                for neighbor in visited[current.val].neighbors: print(f\"visited[{current.val}].neighbors = {neighbor.val}\")\n",
+    "\n",
+    "        \n",
+    "        return visited[node.val] # 返回克隆圖的起始節點"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "node.val=1\n",
+      "queue[0] = 1\n",
+      "visited={1: <__main__.Node object at 0x0000017EF9D82390>}\n",
+      "____________________________________________________________________________________________________\n",
+      "init: queue[0] = 1\n",
+      "pop: current.val=1\n",
+      "\n",
+      "neighbor.val=2\n",
+      "(neighbor.val=2) not in (visited=dict_keys([1]))\n",
+      "visited={1: <__main__.Node object at 0x0000017EF9D82390>, 2: <__main__.Node object at 0x0000017EF9DC5550>}\n",
+      "queue[0] = 2\n",
+      "visited[1].neighbors = 2\n",
+      "\n",
+      "neighbor.val=4\n",
+      "(neighbor.val=4) not in (visited=dict_keys([1, 2]))\n",
+      "visited={1: <__main__.Node object at 0x0000017EF9D82390>, 2: <__main__.Node object at 0x0000017EF9DC5550>, 4: <__main__.Node object at 0x0000017EF9DC5090>}\n",
+      "queue[0] = 2\n",
+      "queue[1] = 4\n",
+      "visited[1].neighbors = 2\n",
+      "visited[1].neighbors = 4\n",
+      "____________________________________________________________________________________________________\n",
+      "init: queue[0] = 2\n",
+      "init: queue[1] = 4\n",
+      "pop: current.val=2\n",
+      "queue[0] = 4\n",
+      "\n",
+      "neighbor.val=1\n",
+      "visited[2].neighbors = 1\n",
+      "\n",
+      "neighbor.val=3\n",
+      "(neighbor.val=3) not in (visited=dict_keys([1, 2, 4]))\n",
+      "visited={1: <__main__.Node object at 0x0000017EF9D82390>, 2: <__main__.Node object at 0x0000017EF9DC5550>, 4: <__main__.Node object at 0x0000017EF9DC5090>, 3: <__main__.Node object at 0x0000017EF9DC4B50>}\n",
+      "queue[0] = 4\n",
+      "queue[1] = 3\n",
+      "visited[2].neighbors = 1\n",
+      "visited[2].neighbors = 3\n",
+      "____________________________________________________________________________________________________\n",
+      "init: queue[0] = 4\n",
+      "init: queue[1] = 3\n",
+      "pop: current.val=4\n",
+      "queue[0] = 3\n",
+      "\n",
+      "neighbor.val=1\n",
+      "visited[4].neighbors = 1\n",
+      "\n",
+      "neighbor.val=3\n",
+      "visited[4].neighbors = 1\n",
+      "visited[4].neighbors = 3\n",
+      "____________________________________________________________________________________________________\n",
+      "init: queue[0] = 3\n",
+      "pop: current.val=3\n",
+      "\n",
+      "neighbor.val=2\n",
+      "visited[3].neighbors = 2\n",
+      "\n",
+      "neighbor.val=4\n",
+      "visited[3].neighbors = 2\n",
+      "visited[3].neighbors = 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Node at 0x17ef9d82390>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Solution().cloneGraph(node)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### dfs (Depth-First Search) 深度優先搜尋"
    ]
   },
@@ -262,158 +426,6 @@
       ]
      },
      "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Solution().cloneGraph(node)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### BFS (Breadth-First Search) 廣度優先搜索"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import deque\n",
-    "from typing import Optional\n",
-    "\n",
-    "class Solution:\n",
-    "    def cloneGraph(self, node: Optional['Node']) -> Optional['Node']:\n",
-    "        if not node:  # 如果輸入節點為空，直接返回 None\n",
-    "            return\n",
-    "\n",
-    "        # 使用隊列來進行BFS，初始化時將輸入節點放入隊列中\n",
-    "        queue = deque([node]) # space: O(V)，V 節點數\n",
-    "        \n",
-    "        print(f\"{node.val=}\")\n",
-    "        for idx, node_tmp in enumerate(queue): print(f\"queue[{idx}] = {node_tmp.val}\")\n",
-    "\n",
-    "        # 初始化字典，用於記錄原節點到克隆節點的映射\n",
-    "        # 克隆輸入節點，並存入 visited 中\n",
-    "        visited = {} # space: O(V)，V 節點數\n",
-    "        visited[node.val] = Node(node.val)\n",
-    "\n",
-    "        print(f\"{visited=}\") \n",
-    "\n",
-    "        # 使用 while 迴圈遍歷整個圖\n",
-    "        while queue: # time: O(V+E)，V 節點數、E 是邊數\n",
-    "            print(\"_\" * 100)\n",
-    "            for idx, node_tmp in enumerate(queue): print(f\"init: queue[{idx}] = {node_tmp.val}\")\n",
-    "\n",
-    "            # 取出隊列中的節點\n",
-    "            current = queue.popleft()\n",
-    "\n",
-    "            print(f\"pop: {current.val=}\")\n",
-    "            for idx, node_tmp in enumerate(queue): print(f\"queue[{idx}] = {node_tmp.val}\")\n",
-    "            \n",
-    "            # 遍歷當前節點的所有鄰居\n",
-    "            for neighbor in current.neighbors: # time: O(E)，E 是邊數\n",
-    "                print(f\"\\n{neighbor.val=}\")\n",
-    "                \n",
-    "                # 如果鄰居尚未被克隆，則進行克隆\n",
-    "                if neighbor.val not in visited:\n",
-    "                    print(f\"({neighbor.val=}) not in (visited={visited.keys()})\")\n",
-    "                    \n",
-    "                    visited[neighbor.val] = Node(neighbor.val) # 克隆鄰居節點，並記錄到 visited 中\n",
-    "                    queue.append(neighbor)  # 將鄰居節點加入隊列中，以便後續處理\n",
-    "\n",
-    "                    print(f\"{visited=}\")\n",
-    "                    for idx, node_tmp in enumerate(queue): print(f\"queue[{idx}] = {node_tmp.val}\")\n",
-    "                \n",
-    "                # 將克隆的鄰居加入克隆節點的鄰居列表中\n",
-    "                visited[current.val].neighbors.append(visited[neighbor.val])\n",
-    "\n",
-    "                for neighbor in visited[current.val].neighbors: print(f\"visited[{current.val}].neighbors = {neighbor.val}\")\n",
-    "\n",
-    "        \n",
-    "        return visited[node.val] # 返回克隆圖的起始節點"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "node.val=1\n",
-      "queue[0] = 1\n",
-      "visited={1: <__main__.Node object at 0x0000017EF9D82390>}\n",
-      "____________________________________________________________________________________________________\n",
-      "init: queue[0] = 1\n",
-      "pop: current.val=1\n",
-      "\n",
-      "neighbor.val=2\n",
-      "(neighbor.val=2) not in (visited=dict_keys([1]))\n",
-      "visited={1: <__main__.Node object at 0x0000017EF9D82390>, 2: <__main__.Node object at 0x0000017EF9DC5550>}\n",
-      "queue[0] = 2\n",
-      "visited[1].neighbors = 2\n",
-      "\n",
-      "neighbor.val=4\n",
-      "(neighbor.val=4) not in (visited=dict_keys([1, 2]))\n",
-      "visited={1: <__main__.Node object at 0x0000017EF9D82390>, 2: <__main__.Node object at 0x0000017EF9DC5550>, 4: <__main__.Node object at 0x0000017EF9DC5090>}\n",
-      "queue[0] = 2\n",
-      "queue[1] = 4\n",
-      "visited[1].neighbors = 2\n",
-      "visited[1].neighbors = 4\n",
-      "____________________________________________________________________________________________________\n",
-      "init: queue[0] = 2\n",
-      "init: queue[1] = 4\n",
-      "pop: current.val=2\n",
-      "queue[0] = 4\n",
-      "\n",
-      "neighbor.val=1\n",
-      "visited[2].neighbors = 1\n",
-      "\n",
-      "neighbor.val=3\n",
-      "(neighbor.val=3) not in (visited=dict_keys([1, 2, 4]))\n",
-      "visited={1: <__main__.Node object at 0x0000017EF9D82390>, 2: <__main__.Node object at 0x0000017EF9DC5550>, 4: <__main__.Node object at 0x0000017EF9DC5090>, 3: <__main__.Node object at 0x0000017EF9DC4B50>}\n",
-      "queue[0] = 4\n",
-      "queue[1] = 3\n",
-      "visited[2].neighbors = 1\n",
-      "visited[2].neighbors = 3\n",
-      "____________________________________________________________________________________________________\n",
-      "init: queue[0] = 4\n",
-      "init: queue[1] = 3\n",
-      "pop: current.val=4\n",
-      "queue[0] = 3\n",
-      "\n",
-      "neighbor.val=1\n",
-      "visited[4].neighbors = 1\n",
-      "\n",
-      "neighbor.val=3\n",
-      "visited[4].neighbors = 1\n",
-      "visited[4].neighbors = 3\n",
-      "____________________________________________________________________________________________________\n",
-      "init: queue[0] = 3\n",
-      "pop: current.val=3\n",
-      "\n",
-      "neighbor.val=2\n",
-      "visited[3].neighbors = 2\n",
-      "\n",
-      "neighbor.val=4\n",
-      "visited[3].neighbors = 2\n",
-      "visited[3].neighbors = 4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.Node at 0x17ef9d82390>"
-      ]
-     },
-     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
