--- a/210. Course Schedule II.ipynb
+++ b/210. Course Schedule II.ipynb
@@ -22,12 +22,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### bfs"
+    "- bfs優勢\n",
+    "  - 更直觀\n",
+    "  - 不容易出現堆疊溢出的問題\n",
+    "  - 適用於拓撲排序\n",
+    "    - 針對有向無環圖 (DAG - Directed Acyclic Graph) 的排序算法\n",
+    "      - 將圖中的頂點按照依賴關係排序\n",
+    "      - 如果存在一條從頂點A到頂點B的路徑，那麼在排序結果中，A一定出現在B之前"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,34 +42,54 @@
     "\n",
     "class Solution:\n",
     "    def findOrder(self, numCourses: int, prerequisites: List[List[int]]) -> List[int]:\n",
-    "        # 建立鄰接表和入度表\n",
-    "        graph = [[] for _ in range(numCourses)] # space: O(E)\n",
-    "        indegree = [0] * numCourses # space: O(V)\n",
+    "        # 建立入度表，即修該課程需要先修的課程數\n",
+    "        indegree = [0] * numCourses # space: O(V)，V: 節點數（課程數）\n",
+    "        print(f\"{indegree=}\\n\")\n",
     "        \n",
-    "        # 建立鄰接表和計算每個節點的入度\n",
-    "        for course, prereq in prerequisites:\n",
-    "            graph[prereq].append(course)\n",
+    "        # 建立鄰接表來表示課程之間的依賴關係圖\n",
+    "        # key: 先修課程，value: 後續可以修的課程列表\n",
+    "        graph = {} # space: O(E)，E: 邊數（先修條件數）\n",
+    "        for course, prereq in prerequisites: # time: O(E)，E: 邊數（先修條件數）\n",
+    "            graph[prereq] = graph.get(prereq, []) + [course]\n",
     "            indegree[course] += 1\n",
+    "\n",
+    "            print(f\"{graph=}\")\n",
+    "            print(f\"{indegree=}\")\n",
     "            \n",
-    "        # 將所有入度為0的課程加入隊列\n",
-    "        queue = deque() # space: O(V)\n",
-    "        for i in range(numCourses):\n",
+    "        # 將所有入度為0的課程加入隊列，即可完成的課程\n",
+    "        queue = deque() # space: O(V)，V: 節點數（課程數）\n",
+    "        for i in range(numCourses): # time: O(V)，V: 節點數（課程數）\n",
     "            if indegree[i] == 0:\n",
     "                queue.append(i)\n",
-    "                \n",
+    "        print(f\"\\n{queue=}\")\n",
+    "\n",
+    "        # 存儲最終的課程修習順序\n",
     "        result = [] # space: O(V)\n",
-    "        \n",
+    "        print(f\"{result=}\")\n",
+    "\n",
     "        # BFS\n",
-    "        while queue:\n",
-    "            curr = queue.popleft()\n",
-    "            result.append(curr)\n",
+    "        while queue: # time: O(V)，V: 節點數（課程數），每個節點只會被處理一次\n",
+    "            print(\"-\"*100)\n",
+    "            print(f\"{queue=}\")\n",
+    "\n",
+    "            current = queue.popleft() # 取出隊列中的節點\n",
+    "            result.append(current) # 將節點(可完成的課程)加入結果列表\n",
     "            \n",
+    "            print(f\"pop: {current=}, {queue=}\")\n",
+    "            print(f\"{result=}\")\n",
+    "\n",
     "            # 將當前課程的所有後續課程的入度減1\n",
-    "            for next_course in graph[curr]:\n",
+    "            for next_course in graph.get(current, []): # time: O(E)，E: 邊數（先修條件數）\n",
     "                indegree[next_course] -= 1\n",
-    "                # 如果入度變為0，表示可以修這門課了\n",
+    "\n",
+    "                print(f\"\\n{next_course=}\")\n",
+    "                print(f\"indegree[{next_course}] - 1 -> {indegree=}\")\n",
+    "\n",
+    "                # 如果入度變為0，表可完成課成\n",
     "                if indegree[next_course] == 0:\n",
     "                    queue.append(next_course)\n",
+    "\n",
+    "                    print(f\"indegree[{next_course}] == 0 -> {queue=}\")\n",
     "                    \n",
     "        # 如果無法完成所有課程（存在環），返回空列表\n",
     "        return result if len(result) == numCourses else []"
@@ -71,25 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "graph={}\n",
+      "indegree=[0]\n",
       "\n",
+      "\n",
+      "queue=deque([0])\n",
+      "result=[]\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "course=0, visited=[0]\n",
-      "visited[0] = 1\n",
-      "visited=[1]\n",
-      "visited[0] = 2\n",
-      "visited=[2]\n",
-      "result=[0] -> return True\n",
-      "course=0, status=True\n",
-      "____________________________________________________________________________________________________\n"
+      "queue=deque([0])\n",
+      "pop: current=0, queue=deque([])\n",
+      "result=[0]\n"
      ]
     },
     {
@@ -98,8 +121,9 @@
        "[0]"
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -111,42 +135,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "indegree=[0, 0]\n",
+      "\n",
+      "graph={0: [1]}\n",
+      "indegree=[0, 1]\n",
       "graph={0: [1], 1: [0]}\n",
+      "indegree=[1, 1]\n",
       "\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "course=0, visited=[0, 0]\n",
-      "visited[0] = 1\n",
-      "visited=[1, 0]\n",
-      "\n",
-      "course=0 -> next_course=1\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "course=1, visited=[1, 0]\n",
-      "visited[1] = 1\n",
-      "visited=[1, 1]\n",
-      "\n",
-      "course=1 -> next_course=0\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "course=0, visited=[1, 1]\n",
-      "visited[0] == 1 -> return False\n",
-      "\n",
-      "course=1 -> next_course=0, status=False\n",
-      "return False\n",
-      "\n",
-      "course=0 -> next_course=1, status=False\n",
-      "return False\n",
-      "course=0, status=False\n",
-      "____________________________________________________________________________________________________\n",
-      "return []\n"
+      "queue=deque([])\n",
+      "result=[]\n"
      ]
     },
     {
@@ -155,8 +159,9 @@
        "[]"
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -168,97 +173,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "indegree=[0, 0, 0, 0]\n",
+      "\n",
+      "graph={0: [1]}\n",
+      "indegree=[0, 1, 0, 0]\n",
+      "graph={0: [1, 2]}\n",
+      "indegree=[0, 1, 1, 0]\n",
+      "graph={0: [1, 2], 1: [3]}\n",
+      "indegree=[0, 1, 1, 1]\n",
       "graph={0: [1, 2], 1: [3], 2: [3]}\n",
+      "indegree=[0, 1, 1, 2]\n",
       "\n",
+      "queue=deque([0])\n",
+      "result=[]\n",
       "----------------------------------------------------------------------------------------------------\n",
+      "queue=deque([0])\n",
+      "pop: current=0, queue=deque([])\n",
+      "result=[0]\n",
       "\n",
-      "course=0, visited=[0, 0, 0, 0]\n",
-      "visited[0] = 1\n",
-      "visited=[1, 0, 0, 0]\n",
+      "next_course=1\n",
+      "indegree[1] - 1 -> indegree=[0, 0, 1, 2]\n",
+      "indegree[1] == 0 -> queue=deque([1])\n",
       "\n",
-      "course=0 -> next_course=1\n",
+      "next_course=2\n",
+      "indegree[2] - 1 -> indegree=[0, 0, 0, 2]\n",
+      "indegree[2] == 0 -> queue=deque([1, 2])\n",
       "----------------------------------------------------------------------------------------------------\n",
+      "queue=deque([1, 2])\n",
+      "pop: current=1, queue=deque([2])\n",
+      "result=[0, 1]\n",
       "\n",
-      "course=1, visited=[1, 0, 0, 0]\n",
-      "visited[1] = 1\n",
-      "visited=[1, 1, 0, 0]\n",
-      "\n",
-      "course=1 -> next_course=3\n",
+      "next_course=3\n",
+      "indegree[3] - 1 -> indegree=[0, 0, 0, 1]\n",
       "----------------------------------------------------------------------------------------------------\n",
+      "queue=deque([2])\n",
+      "pop: current=2, queue=deque([])\n",
+      "result=[0, 1, 2]\n",
       "\n",
-      "course=3, visited=[1, 1, 0, 0]\n",
-      "visited[3] = 1\n",
-      "visited=[1, 1, 0, 1]\n",
-      "visited[3] = 2\n",
-      "visited=[1, 1, 0, 2]\n",
-      "result=[3] -> return True\n",
-      "\n",
-      "course=1 -> next_course=3, status=True\n",
-      "visited[1] = 2\n",
-      "visited=[1, 2, 0, 2]\n",
-      "result=[3, 1] -> return True\n",
-      "\n",
-      "course=0 -> next_course=1, status=True\n",
-      "\n",
-      "course=0 -> next_course=2\n",
+      "next_course=3\n",
+      "indegree[3] - 1 -> indegree=[0, 0, 0, 0]\n",
+      "indegree[3] == 0 -> queue=deque([3])\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "course=2, visited=[1, 2, 0, 2]\n",
-      "visited[2] = 1\n",
-      "visited=[1, 2, 1, 2]\n",
-      "\n",
-      "course=2 -> next_course=3\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "course=3, visited=[1, 2, 1, 2]\n",
-      "visited[3] == 2 -> return True\n",
-      "\n",
-      "course=2 -> next_course=3, status=True\n",
-      "visited[2] = 2\n",
-      "visited=[1, 2, 2, 2]\n",
-      "result=[3, 1, 2] -> return True\n",
-      "\n",
-      "course=0 -> next_course=2, status=True\n",
-      "visited[0] = 2\n",
-      "visited=[2, 2, 2, 2]\n",
-      "result=[3, 1, 2, 0] -> return True\n",
-      "course=0, status=True\n",
-      "____________________________________________________________________________________________________\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "course=1, visited=[2, 2, 2, 2]\n",
-      "visited[1] == 2 -> return True\n",
-      "course=1, status=True\n",
-      "____________________________________________________________________________________________________\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "course=2, visited=[2, 2, 2, 2]\n",
-      "visited[2] == 2 -> return True\n",
-      "course=2, status=True\n",
-      "____________________________________________________________________________________________________\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "course=3, visited=[2, 2, 2, 2]\n",
-      "visited[3] == 2 -> return True\n",
-      "course=3, status=True\n",
-      "____________________________________________________________________________________________________\n"
+      "queue=deque([3])\n",
+      "pop: current=3, queue=deque([])\n",
+      "result=[0, 1, 2, 3]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0, 2, 1, 3]"
+       "[0, 1, 2, 3]"
       ]
      },
+     "execution_count": 12,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -277,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +359,7 @@
        "[0]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +417,7 @@
        "[]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +520,7 @@
        "[0, 2, 1, 3]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
