--- a/102. Binary Tree Level Order Traversal.ipynb
+++ b/102. Binary Tree Level Order Traversal.ipynb
@@ -9,69 +9,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O( n )$**  \n",
+    "**空間複雜度: $O( n )$**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Definition for a binary tree node.\n",
-    "# class TreeNode:\n",
-    "#     def __init__(self, val=0, left=None, right=None):\n",
-    "#         self.val = val\n",
-    "#         self.left = left\n",
-    "#         self.right = right\n",
+    "class TreeNode:\n",
+    "    def __init__(self, val=0, left=None, right=None):\n",
+    "        self.val = val\n",
+    "        self.left = left\n",
+    "        self.right = right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Optional, List\n",
+    "from collections import deque\n",
+    "\n",
     "class Solution:\n",
-    "    def levelOrder(self, root):\n",
+    "    def levelOrder(self, root: Optional[TreeNode]) -> List[List[int]]:\n",
+    "        # 如果樹為空，返回空列表\n",
     "        if not root:\n",
-    "          return []\n",
+    "            return []\n",
     "\n",
-    "        result = []\n",
-    "        queue = [root] # 初始化佇列，將第一層放入\n",
+    "        # 初始化結果列表和隊列\n",
+    "        result = [] # space: O(n)，n是節點數\n",
+    "        queue = deque([root]) # space: O(n)，n是節點數\n",
     "\n",
-    "        while len(queue) > 0: # 佇列為空，表示沒有下一層\n",
-    "            print(f\"queue = {queue}\")\n",
-    "            layer_values = [] # 創建一個list來儲存當前層級的節點值\n",
-    "            layer_node_count = len(queue) # 取得當前層級的節點數量\n",
+    "        # 當隊列不為空時繼續遍歷\n",
+    "        while queue: # time: O(n)，n是節點數\n",
+    "            level_size = len(queue) # 獲取當前層的節點數量\n",
+    "            level = [] # 存儲當前層的節點值\n",
     "\n",
-    "            for i in range(layer_node_count): # 使用迴圈依次處理當前層級的節點\n",
-    "                node = queue.pop(0) # 從queue中取出第一個節點\n",
-    "                print(f\"node({i}) = {node}\")\n",
-    "                layer_values.append(node.val) # 將節點的值加入layer_values\n",
+    "            print(\"_\"*100)\n",
+    "            print(f\"queue={[node.val for node in queue]}\")\n",
+    "            print(f\"{level_size=}, {level=}\")\n",
+    "\n",
+    "            # 遍歷當前層的所有節點\n",
+    "            for _ in range(level_size):\n",
+    "                node = queue.popleft() # 從隊列左側取出節點\n",
+    "                level.append(node.val) # 將節點值加入當前層列表\n",
     "                \n",
+    "                print(\"-\"*100)\n",
+    "                print(f\"{node.val=}, {level=}\")\n",
+    "\n",
+    "                # 如果有左子節點，加入隊列\n",
     "                if node.left:\n",
-    "                    queue.append(node.left) # 如果節點有左子節點，將左子節點加入佇列\n",
+    "                    queue.append(node.left)\n",
+    "\n",
+    "                    print(f\"append left ({node.left.val}): queue={[node.val for node in queue]}\")\n",
+    "\n",
+    "                # 如果有右子節點，加入隊列\n",
     "                if node.right:\n",
-    "                    queue.append(node.right) # 如果節點有右子節點，將右子節點加入佇列\n",
-    "                \n",
-    "            result.append(layer_values) # 完成迴圈後，將當前層級的節點值(layer_values)加入result中\n",
-    "            print(f\"result = {result}\\n\")\n",
+    "                    queue.append(node.right)\n",
+    "\n",
+    "                    print(f\"append right ({node.right.val}): queue={[node.val for node in queue]}\")\n",
+    "            \n",
+    "            result.append(level) # 將當前層的節點值列表加入結果中\n",
+    "            print(f\"{result=}\")\n",
     "\n",
     "        return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "queue = [<__main__.TreeNode object at 0x00000277CC548790>]\n",
-      "node(0) = <__main__.TreeNode object at 0x00000277CC548790>\n",
-      "result = [[3]]\n",
-      "\n",
-      "queue = [<__main__.TreeNode object at 0x00000277CC4DEEB0>, <__main__.TreeNode object at 0x00000277CC4DED00>]\n",
-      "node(0) = <__main__.TreeNode object at 0x00000277CC4DEEB0>\n",
-      "node(1) = <__main__.TreeNode object at 0x00000277CC4DED00>\n",
-      "result = [[3], [9, 20]]\n",
-      "\n",
-      "queue = [<__main__.TreeNode object at 0x00000277CC4DEE80>, <__main__.TreeNode object at 0x00000277CC548040>]\n",
-      "node(0) = <__main__.TreeNode object at 0x00000277CC4DEE80>\n",
-      "node(1) = <__main__.TreeNode object at 0x00000277CC548040>\n",
-      "result = [[3], [9, 20], [15, 7]]\n",
-      "\n"
+      "____________________________________________________________________________________________________\n",
+      "queue=[3]\n",
+      "level_size=1, level=[]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "node.val=3, level=[3]\n",
+      "append left (9): queue=[9]\n",
+      "append right (20): queue=[9, 20]\n",
+      "result=[[3]]\n",
+      "____________________________________________________________________________________________________\n",
+      "queue=[9, 20]\n",
+      "level_size=2, level=[]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "node.val=9, level=[9]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "node.val=20, level=[9, 20]\n",
+      "append left (15): queue=[15]\n",
+      "append right (7): queue=[15, 7]\n",
+      "result=[[3], [9, 20]]\n",
+      "____________________________________________________________________________________________________\n",
+      "queue=[15, 7]\n",
+      "level_size=2, level=[]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "node.val=15, level=[15]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "node.val=7, level=[15, 7]\n",
+      "result=[[3], [9, 20], [15, 7]]\n"
      ]
     },
     {
@@ -80,18 +127,12 @@
        "[[3], [9, 20], [15, 7]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "class TreeNode:\n",
-    "    def __init__(self, val=0, left=None, right=None):\n",
-    "        self.val = val\n",
-    "        self.left = left\n",
-    "        self.right = right\n",
-    "        \n",
     "root = TreeNode(3)\n",
     "root.left = TreeNode(9)\n",
     "root.right = TreeNode(20)\n",
@@ -118,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.11"
   },
   "orig_nbformat": 4
  },
